--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,9 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@v2
+
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
 
