--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,9 +30,8 @@ jobs:
         run: |
           # IMAGE_TAG=`echo $GITHUB_REF | sed 's#.*/v##'`
           IMAGE_TAG=testing
+          echo "IMAGE_TAG=${IMAGE_TAG} >> $GITHUB_ENV
           echo "Setting Docker image tag to ${IMAGE_TAG}"
-        env:
-          IMAGE_TAG: ${IMAGE_TAG}
 
       - name: Build and Push
         uses: docker/build-push-action@v3
@@ -41,4 +40,4 @@ jobs:
           file: deployment/docker/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: false
-          tags: olivergregorius/sun2000-rest:${IMAGE_TAG}
+          tags: olivergregorius/sun2000-rest:${{ env.IMAGE_TAG }}
