--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           # IMAGE_TAG=`echo $GITHUB_REF | sed 's#.*/v##'`
           IMAGE_TAG=testing
-          echo "IMAGE_TAG=${IMAGE_TAG} >> $GITHUB_ENV
+          echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
           echo "Setting Docker image tag to ${IMAGE_TAG}"
 
       - name: Build and Push
