--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: {context}/deployment/docker/Dockerfile
+          file: ./deployment/docker/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: false
           tags: olivergregorius/sun2000-rest:${{ env.IMAGE_TAG }}
