--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,8 +33,9 @@ jobs:
         run: |
           # IMAGE_TAG=`echo $GITHUB_REF | sed 's#.*/v##'`
           IMAGE_TAG=testing
-          echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
           echo "Setting Docker image tag to ${IMAGE_TAG}"
+          echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
+          sed -i "s/<latest_tag_placeholder>/${IMAGE_TAG}" ./deployment/docker/README.md
 
       - name: Build and Push
         uses: docker/build-push-action@v3
@@ -44,3 +45,12 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: olivergregorius/sun2000-rest:${{ env.IMAGE_TAG }}
+
+      - name: Update repo description
+        uses: peter-evans/dockerhub-description@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: olivergregorius/sun2000-rest
+          short-description: RESTful interface for reading Huawei Sun2000 inverter metrics
+          readme-filepath: ./deployment/docker/README.md
