Refactoring, added tests

--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -5,9 +5,10 @@ WORKDIR /usr/src/app
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY src/* ./
+COPY application .
+COPY wsgi.py .
 
 EXPOSE 5000
-ENV FLASK_APP=/usr/src/app/main.py
+ENV FLASK_APP=/usr/src/app/wsgi.py
 
 ENTRYPOINT ["flask", "run"]
