--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,14 +1,9 @@
 name: Publish
 
-#on:
-#  release:
-#    types:
-#      - published
-
 on:
-  push:
-    branches:
-      - '*'
+  release:
+    types:
+      - published
 
 jobs:
   publish:
@@ -31,8 +26,7 @@ jobs:
 
       - name: Set release version
         run: |
-          # IMAGE_TAG=`echo $GITHUB_REF | sed 's#.*/v##'`
-          IMAGE_TAG=testing
+          IMAGE_TAG=`echo $GITHUB_REF | sed 's#.*/v##'`
           echo "Setting Docker image tag to ${IMAGE_TAG}"
           echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
           sed -i "s/<latest_tag_placeholder>/${IMAGE_TAG}/" ./deployment/docker/README.md
