Updated Dockerfile for being production ready

--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -1,14 +1,18 @@
-FROM python:3.10.5-alpine3.16
-
-WORKDIR /usr/src/app
-
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
-
-COPY application .
-COPY wsgi.py .
+FROM alpine:3.16
 
 EXPOSE 5000
-ENV FLASK_APP=/usr/src/app/wsgi.py
+WORKDIR /usr/src/app
+ENV UWSGI_WORKERS=5
 
-ENTRYPOINT ["flask", "run"]
+RUN apk add --no-cache python3 py3-pip uwsgi-python3
+
+COPY requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt && rm requirements.txt
+
+COPY application ./application
+COPY wsgi.py ./wsgi.py
+
+CMD ["uwsgi", "--http-socket", "0.0.0.0:5000", \
+                "--uid", "uwsgi", \
+                "--plugins", "python3", \
+                "--wsgi", "wsgi:app"]
