--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,13 @@ jobs:
 
       - name: Install requirements
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip coverage
           pip install -r requirements.txt
 
-      - name: Test package
+      - name: Test package with coverage
         run: |
-          python -m unittest discover tests
+          coverage run -m unittest discover tests
+
+      - name: Generate coverage report
+        run: |
+          coverage report -m
