--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,4 +31,4 @@ jobs:
 
       - name: Generate coverage report
         run: |
-          coverage report -m
+          coverage report --show-missing --fail-under=80
